--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-cov": "echo \"Error: no test specified\" && exit 1",
     "eslint": "eslint simasset.js --fix"
   },
   "repository": {
