--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "type": "git",
     "url": "git+https://github.com/snst-lab/SimAsset.git"
   },
-  "author": "",
+  "author": "Tanusuke",
   "license": "LGPL-3.0",
   "bugs": {
     "url": "https://github.com/snst-lab/SimAsset/issues"
